<resources>
    <string name="app_name">The Shoe Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">E-Mail</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="password_again">Password again</string>
    <string name="continue_button">Continue</string>
    <string name="size_label">Size: %s</string>
    <string name="company_name_label">%s - %s</string>

    <string name="invalid_name">Invalid Name</string>
    <string name="invalid_company">Invalid Company</string>
    <string name="invalid_email">Invalid E-Mail</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="password_not_same">Passwords are not same</string>
    <string name="welcome_header">Welcome</string>
    <string name="welcome_text">
        Dear user,
        \n\n\t\twelcome to The Shoe Store. Shoes are here for some time and since the time of wooden
        sandals has passed some time, there are genuinely hundreds of brands and thousands of
        different models of shoes. We took the task up on ourselves to provide a tool that would
        help small companies or even passionate shoe collectors to get organized. Enjoy the app and
        feel free to give us 5 star rating.
        \n\n\
        Your Shoe Store
    </string>
    <string name="instructions">Instructions</string>
    <string name="instructions_text">
        This applications provides to views for managing your shoes in just 2 simple views.
        In the first one, you will find all your shoes and a \"+\" button that leads to the second
        view for adding a new shoes to your list.
    </string>
    <string name="add_button_description">Add button</string>
    <string name="detail_header">Add new shoe</string>
    <string name="shoe_name_hint">Name</string>
    <string name="add">Add</string>
    <string name="description">Description</string>
    <string name="size">Size</string>
    <string name="company">Company</string>
    <string name="logout">Logout</string>
    <string name="preference_file_key">com.udacity.shoestore</string>
    <string name="saved_login_state">saved_login_state</string>
    <string name="name_autofill_hint">Name of the shoe</string>
    <string name="company_autofill_hint">Company/Manufacturer</string>
    <string name="size_autofill_hint">Shoe size</string>
    <string name="description_autofill_hint">Shoe description</string>
    <string name="no_data_message">No shoes found. \nAdd some via the \"+\" button.</string>
    <string name="warning_sign_description">Warning sign</string>
</resources>
