<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" >

    <!--I have chosen a LinearLayout over ConstraintLayout so it is easier and more transparent. Here
    I am using a TabLayout for Login and Sign up and when a user selects either tab, the other one
    becomes invisible. This way I don't need to set constraints for invisible elements. -->

    <data>
        <variable
            name="loginViewModel"
            type="com.udacity.shoestore.screens.login.LoginViewModel" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up" />
        </com.google.android.material.tabs.TabLayout>

        <LinearLayout
            style="@style/layout"
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="@string/email"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:text="@={loginViewModel.email}" />

            <EditText
                android:id="@+id/password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:text="@={loginViewModel.password}" />

            <Button
                android:id="@+id/login_button"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/login" />
        </LinearLayout>


        <LinearLayout
            style="@style/layout"
            android:visibility="gone"
            android:id="@+id/sign_up_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/sign_up_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="@string/name"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textEmailAddress"
                android:text="@={loginViewModel.name}"/>

            <EditText
                android:id="@+id/sign_up_email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="@string/email"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:text="@={loginViewModel.email}" />

            <EditText
                android:id="@+id/sign_up_password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:text="@={loginViewModel.password}" />

            <EditText
                android:id="@+id/sign_up_password_repear_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/password_again"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:text="@={loginViewModel.passwordRepeat}" />

            <Button
                android:id="@+id/sign_up_button"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/sign_up" />
        </LinearLayout>
    </LinearLayout>

</layout>